--- a/src/main/resources/templates/apps/business/platform/game/wxGetCode/main.html
+++ b/src/main/resources/templates/apps/business/platform/game/wxGetCode/main.html
@@ -1,105 +1,10 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title></title>
-    <link href="../../../css/mui.min.css" rel="stylesheet"/>
+    <script type="text/javascript" charset="utf-8">
+        window.location.href="${url}?token=${token}";
+    </script>
 </head>
 <body>
-<button id="btnWx">微信授权</button>
-<div id="userName"></div>
-支付金额：<input type="number" id="money" value="0.01"/>
-<button id="btnWxPay">微信支付</button>
-<script src="../../../js/mui.min.js?v=1.1"></script>
-<script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-<script type="text/javascript" charset="utf-8">
-    var userName = "${userName}";
-    if(userName == ""){
-        mui.toast("未登录");
-    }else{
-        mui("#userName")[0].innerHTML = "用户名："+userName;
-    }
-    //微信授权登录
-    btnWx.addEventListener('tap',function(event){
-        //请求授权地址
-        mui.post("getLoginCode",function(data){
-            window.location.href = data;
-        });
-    });
-
-    //微信支付
-    btnWxPay.addEventListener('tap',function(event){
-        //转换为 分 单位
-        var orderprices = Number(mui("#money")[0].value) * 100;
-        //判断支付金额
-        if(!orderprices > 0) {
-            mui.toast("支付金额异常!请联系客服人员");
-            return false;
-        }
-        //调用后台
-        mui.getJSON('/wxController/getWXPayXmlH5',{orderprices:orderprices}, function(data) {
-            if(data.status == 200) {
-                console.log(JSON.stringify(data));
-                var appid = data.appid;
-                var timestamp = data.timeStamp;
-                var nonceStr = data.nonceStr;
-                var packages = data.package;
-                var paySign = data.paySign;
-                //交易号
-                var trans = packages.substring(10);
-                //alert(data.appid+data.timestamp+data.package+data.paySign)
-                function onBridgeReady() {
-                    WeixinJSBridge.invoke(
-                            'getBrandWCPayRequest', {
-                                "appId": appid, //公众号名称，由商户传入
-                                "timeStamp": timestamp, //时间戳，自1970年以来的秒数
-                                "nonceStr": nonceStr, //随机串
-                                "package": packages,
-                                "signType": "MD5", //微信签名方式：
-                                "paySign": paySign //微信签名
-                            },
-                            function(res) {
-                                if(res.err_msg == "get_brand_wcpay_request:ok") {
-                                    //alert("支付成功！")
-                                    // 支付成功后 修改订单状态  2代发货
-                                    mui.toast("支付成功！");
-
-                                    /*2017-09-28 15:23:44 已改为自动回调*/
-//									mui.post('/wxController/rechargeManagement',{
-//											userId:"",
-//                                            payAmount:0.01,
-//                                            roomCount:""
-//										},function(data){
-//											if(data.status=="200"){
-//												mui.toast("支付成功！");
-//											}
-//										},'json'
-//									);
-                                } else if(res.err_msg == "get_brand_wcpay_request:cancel") {
-                                    mui.toast('取消支付！ ');
-                                } else {
-                                    mui.toast("第三方支付出现异常!请联系客服人员");
-                                }
-                                // 使用以上方式判断前端返回,微信团队郑重提示：res.err_msg将在用户支付成功后返回    ok，但并不保证它绝对可靠。
-                            }
-                    );
-                }
-
-                if(typeof WeixinJSBridge == "undefined") {
-                    if(document.addEventListener) {
-                        document.addEventListener('WeixinJSBridgeReady', onBridgeReady, false);
-                    } else if(document.attachEvent) {
-                        document.attachEvent('WeixinJSBridgeReady', onBridgeReady);
-                        document.attachEvent('onWeixinJSBridgeReady', onBridgeReady);
-                    }
-                } else {
-                    onBridgeReady();
-                }
-            }
-        });
-    });
-
-</script>
 </body>
 </html>
