微信分享功能代码提交

--- a/src/main/resources/templates/apps/business/platform/game/wxGetCode/main.html
+++ b/src/main/resources/templates/apps/business/platform/game/wxGetCode/main.html
@@ -29,6 +29,7 @@
                 nonceStr: data.nonceStr,
                 signature: data.signature,
                 jsApiList: [
+                    'checkJsApi',
                     'onMenuShareTimeline',
                     'onMenuShareAppMessage'
                 ]
