--- a/src/main/resources/templates/apps/business/platform/game/wxGetCode/main.html
+++ b/src/main/resources/templates/apps/business/platform/game/wxGetCode/main.html
@@ -1,212 +1,10 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title></title>
-    <link href="../../../css/mui.min.css" rel="stylesheet"/>
-    <script src="../../../js/mui.min.js?v=1.1"></script>
-    <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-    <script>
-        /*
-         * 注意：
-         * 1. 所有的JS接口只能在公众号绑定的域名下调用，公众号开发者需要先登录微信公众平台进入“公众号设置”的“功能设置”里填写“JS接口安全域名”。
-         * 2. 如果发现在 Android 不能分享自定义内容，请到官网下载最新的包覆盖安装，Android 自定义分享接口需升级至 6.0.2.58 版本及以上。
-         * 3. 常见问题及完整 JS-SDK 文档地址：http://mp.weixin.qq.com/wiki/7/aaa137b55fb2e0456bf8dd9148dd613f.html
-         *
-         * 开发中遇到问题详见文档“附录5-常见错误及解决办法”解决，如仍未能解决可通过以下渠道反馈：
-         * 邮箱地址：weixin-open@qq.com
-         * 邮件主题：【微信JS-SDK反馈】具体问题
-         * 邮件内容说明：用简明的语言描述问题所在，并交代清楚遇到该问题的场景，可附上截屏图片，微信团队会尽快处理你的反馈。
-         * http://game.bizpartner.cn/wxController/wxLoginHtml
-         * http://192.168.199.203/wxController/wxLoginHtml
-         */
-        mui.post("../getWxConfig",{url:"http://game.bizpartner.cn/wxController/wxLoginHtml"},function(data){
-            wx.config({
-                debug: true,
-                appId: data.appId,
-                timestamp: data.timestamp,
-                nonceStr: data.nonceStr,
-                signature: data.signature,
-                jsApiList: [
-                    'checkJsApi',
-                    'onMenuShareTimeline',
-                    'onMenuShareAppMessage'
-                ]
-            });
-            var head= document.getElementsByTagName('body')[0];
-            var zepto = document.createElement('script');
-            zepto.type= 'text/javascript';
-            zepto.src= 'http://203.195.235.76/jssdk/js/zepto.min.js';
-            head.appendChild(zepto);
-        });
+    <script type="text/javascript" charset="utf-8">
+        window.location.href="${url}?token=${token}";
     </script>
 </head>
 <body>
-<button id="btnWx">微信授权</button>
-<div id="userName"></div>
-支付金额：<input type="number" id="money" value="0.01"/>
-<button id="btnWxPay">微信支付</button>
-<button id="openGame">打开游戏</button>
-
-<button id="share1">分享好友</button>
-<button id="share2">分享朋友圈</button>
-<!--<script src="http://203.195.235.76/jssdk/js/zepto.min.js"></script>-->
-<script type="text/javascript" charset="utf-8">
-    var userName = "${userName}";
-    if(userName == ""){
-        mui.toast("未登录");
-    }else{
-        mui("#userName")[0].innerHTML = "用户名："+userName;
-    }
-
-    wx.checkJsApi({
-        jsApiList: ['onMenuShareTimeline'], // 需要检测的JS接口列表，所有JS接口列表见附录2,
-        success: function(res) {
-            debugger
-            // 以键值对的形式返回，可用的api值true，不可用为false
-            // 如：{"checkResult":{"chooseImage":true},"errMsg":"checkJsApi:ok"}
-        }
-    });
-
-    //微信授权登录
-    btnWx.addEventListener('tap',function(event){
-        //请求授权地址
-        mui.post("getLoginCode",function(data){
-            window.location.href = data;
-        });
-    });
-
-    openGame.addEventListener('tap',function(evnent){
-        window.location.href = "http://192.168.199.203:7456/";
-    });
-
-    // 2. 分享接口
-    // 2.1 监听“分享给朋友”，按钮点击、自定义分享内容及分享结果接口
-    document.querySelector('#share1').onclick = function () {
-        debugger
-
-        wx.onMenuShareAppMessage({
-            title: '互联网之子',
-            desc: '在长大的过程中，我才慢慢发现，我身边的所有事，别人跟我说的所有事，那些所谓本来如此，注定如此的事，它们其实没有非得如此，事情是可以改变的。更重要的是，有些事既然错了，那就该做出改变。',
-            link: 'http://movie.douban.com/subject/25785114/',
-            imgUrl: 'http://demo.open.weixin.qq.com/jssdk/images/p2166127561.jpg',
-            trigger: function (res) {
-                debugger
-                // 不要尝试在trigger中使用ajax异步请求修改本次分享的内容，因为客户端分享操作是一个同步操作，这时候使用ajax的回包会还没有返回
-                alert('用户点击发送给朋友');
-            },
-            success: function (res) {
-                debugger
-                alert('已分享');
-            },
-            cancel: function (res) {
-                debugger
-                alert('已取消');
-            },
-            fail: function (res) {
-                debugger
-                alert(JSON.stringify(res));
-            }
-        });
-    };
-
-    // 2.2 监听“分享到朋友圈”按钮点击、自定义分享内容及分享结果接口
-    document.querySelector('#share2').onclick = function () {
-        wx.ready(function(){
-            wx.onMenuShareTimeline({
-                title: '互联网之子',
-                link: 'http://movie.douban.com/subject/25785114/',
-                imgUrl: 'http://demo.open.weixin.qq.com/jssdk/images/p2166127561.jpg',
-                trigger: function (res) {
-                    // 不要尝试在trigger中使用ajax异步请求修改本次分享的内容，因为客户端分享操作是一个同步操作，这时候使用ajax的回包会还没有返回
-                    alert('用户点击分享到朋友圈');
-                },
-                success: function (res) {
-                    alert('已分享');
-                },
-                cancel: function (res) {
-                    alert('已取消');
-                },
-                fail: function (res) {
-                    alert(JSON.stringify(res));
-                }
-            });
-        });
-    };
-
-    //微信支付
-    btnWxPay.addEventListener('tap',function(event){
-        //转换为 分 单位
-        var orderprices = Number(mui("#money")[0].value) * 100;
-        //判断支付金额
-        if(!orderprices > 0) {
-            mui.toast("支付金额异常!请联系客服人员");
-            return false;
-        }
-        //调用后台
-        mui.getJSON('/wxController/getWXPayXmlH5',{orderprices:orderprices}, function(data) {
-            if(data.status == 200) {
-                console.log(JSON.stringify(data));
-                var appid = data.appid;
-                var timestamp = data.timeStamp;
-                var nonceStr = data.nonceStr;
-                var packages = data.package;
-                var paySign = data.paySign;
-                //交易号
-                var trans = packages.substring(10);
-                //alert(data.appid+data.timestamp+data.package+data.paySign)
-                function onBridgeReady() {
-                    WeixinJSBridge.invoke(
-                            'getBrandWCPayRequest', {
-                                "appId": appid, //公众号名称，由商户传入
-                                "timeStamp": timestamp, //时间戳，自1970年以来的秒数
-                                "nonceStr": nonceStr, //随机串
-                                "package": packages,
-                                "signType": "MD5", //微信签名方式：
-                                "paySign": paySign //微信签名
-                            },
-                            function(res) {
-                                if(res.err_msg == "get_brand_wcpay_request:ok") {
-                                    //alert("支付成功！")
-                                    // 支付成功后 修改订单状态  2代发货
-                                    mui.toast("支付成功！");
-
-                                    /*2017-09-28 15:23:44 已改为自动回调*/
-//									mui.post('/wxController/rechargeManagement',{
-//											userId:"",
-//                                            payAmount:0.01,
-//                                            roomCount:""
-//										},function(data){
-//											if(data.status=="200"){
-//												mui.toast("支付成功！");
-//											}
-//										},'json'
-//									);
-                                } else if(res.err_msg == "get_brand_wcpay_request:cancel") {
-                                    mui.toast('取消支付！ ');
-                                } else {
-                                    mui.toast("第三方支付出现异常!请联系客服人员");
-                                }
-                                // 使用以上方式判断前端返回,微信团队郑重提示：res.err_msg将在用户支付成功后返回    ok，但并不保证它绝对可靠。
-                            }
-                    );
-                }
-
-                if(typeof WeixinJSBridge == "undefined") {
-                    if(document.addEventListener) {
-                        document.addEventListener('WeixinJSBridgeReady', onBridgeReady, false);
-                    } else if(document.attachEvent) {
-                        document.attachEvent('WeixinJSBridgeReady', onBridgeReady);
-                        document.attachEvent('onWeixinJSBridgeReady', onBridgeReady);
-                    }
-                } else {
-                    onBridgeReady();
-                }
-            }
-        });
-    });
-
-</script>
 </body>
 </html>
