微信分享功能代码提交

--- a/src/main/resources/templates/apps/business/platform/game/wxGetCode/main1.html
+++ b/src/main/resources/templates/apps/business/platform/game/wxGetCode/main1.html
@@ -21,7 +21,7 @@
          * http://game.bizpartner.cn/wxController/wxLoginHtml
          * http://192.168.199.203/wxController/wxLoginHtml
          */
-        mui.post("../getWxConfig",{url:"http://game.bizpartner.cn/wxController/wxLoginHtml"},function(data){
+        mui.post("getWxConfig",{url:"http://game.bizpartner.cn/wxController/wxLoginHtml1"},function(data){
             wx.config({
                 debug: true,
                 appId: data.appId,
