微信分享功能代码提交

--- a/src/main/resources/templates/apps/business/platform/game/wxGetCode/main.html
+++ b/src/main/resources/templates/apps/business/platform/game/wxGetCode/main.html
@@ -3,7 +3,7 @@
 <head>
     <script type="text/javascript" charset="utf-8">
         alert("${url}?token=${token}");
-        window.location.href="${url}?token=${token}";
+        window.location.href="${url}";
     </script>
 </head>
 <body>
