--- a/src/main/resources/templates/apps/business/platform/game/wxGetCode/main.html
+++ b/src/main/resources/templates/apps/business/platform/game/wxGetCode/main.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script type="text/javascript" charset="utf-8">
-        alert("${url}");
+        console.log("${url}");
         window.location.href="${url}";
     </script>
 </head>
