--- a/src/main/resources/templates/apps/business/platform/game/wxGetCode/main1.html
+++ b/src/main/resources/templates/apps/business/platform/game/wxGetCode/main1.html
@@ -63,7 +63,6 @@
     wx.checkJsApi({
         jsApiList: ['onMenuShareTimeline'], // 需要检测的JS接口列表，所有JS接口列表见附录2,
         success: function(res) {
-            debugger
             // 以键值对的形式返回，可用的api值true，不可用为false
             // 如：{"checkResult":{"chooseImage":true},"errMsg":"checkJsApi:ok"}
         }
@@ -81,47 +80,50 @@
         window.location.href = "http://192.168.199.203:7456/";
     });
 
-    // 2.1 监听“分享给朋友”，按钮点击、自定义分享内容及分享结果接口
-    wx.onMenuShareAppMessage({
-        title: '互联网之子',
-        desc: '在长大的过程中，我才慢慢发现，我身边的所有事，别人跟我说的所有事，那些所谓本来如此，注定如此的事，它们其实没有非得如此，事情是可以改变的。更重要的是，有些事既然错了，那就该做出改变。',
-        link: 'http://movie.douban.com/subject/25785114/',
-        imgUrl: 'http://demo.open.weixin.qq.com/jssdk/images/p2166127561.jpg',
-        trigger: function (res) {
-            // 不要尝试在trigger中使用ajax异步请求修改本次分享的内容，因为客户端分享操作是一个同步操作，这时候使用ajax的回包会还没有返回
-            alert('用户点击发送给朋友');
-        },
-        success: function (res) {
-            alert('已分享');
-        },
-        cancel: function (res) {
-            alert('已取消');
-        },
-        fail: function (res) {
-            alert(JSON.stringify(res));
-        }
-    });
-    // 2.2 监听“分享到朋友圈”按钮点击、自定义分享内容及分享结果接口
-    wx.onMenuShareTimeline({
-        title: '互联网之子',
-        link: 'http://movie.douban.com/subject/25785114/',
-        imgUrl: 'http://demo.open.weixin.qq.com/jssdk/images/p2166127561.jpg',
-        trigger: function (res) {
-            // 不要尝试在trigger中使用ajax异步请求修改本次分享的内容，因为客户端分享操作是一个同步操作，这时候使用ajax的回包会还没有返回
-            alert('用户点击分享到朋友圈');
-        },
-        success: function (res) {
-            alert('已分享');
-        },
-        cancel: function (res) {
-            alert('已取消');
-        },
-        fail: function (res) {
-            alert(JSON.stringify(res));
-        }
-    });
+         // 2. 分享接口
+        wx.ready(function(){
 
+            // 2.1 监听“分享给朋友”，按钮点击、自定义分享内容及分享结果接口
+            wx.onMenuShareAppMessage({
+                title: '互联网之子1',
+                desc: '在长大的过程中，我才慢慢发现，我身边的所有事，别人跟我说的所有事，那些所谓本来如此，注定如此的事，它们其实没有非得如此，事情是可以改变的。更重要的是，有些事既然错了，那就该做出改变。',
+                link: 'http://movie.douban.com/subject/25785114/',
+                imgUrl: 'http://demo.open.weixin.qq.com/jssdk/images/p2166127561.jpg',
+                trigger: function (res) {
+                    // 不要尝试在trigger中使用ajax异步请求修改本次分享的内容，因为客户端分享操作是一个同步操作，这时候使用ajax的回包会还没有返回
+                    alert('用户点击发送给朋友');
+                },
+                success: function (res) {
+                    alert('已分享');
+                },
+                cancel: function (res) {
+                    alert('已取消');
+                },
+                fail: function (res) {
+                    alert(JSON.stringify(res));
+                }
+            });
 
+            // 2.2 监听“分享到朋友圈”按钮点击、自定义分享内容及分享结果接口
+            wx.onMenuShareTimeline({
+                title: '互联网之子2',
+                link: 'http://movie.douban.com/subject/25785114/',
+                imgUrl: 'http://demo.open.weixin.qq.com/jssdk/images/p2166127561.jpg',
+                trigger: function (res) {
+                    // 不要尝试在trigger中使用ajax异步请求修改本次分享的内容，因为客户端分享操作是一个同步操作，这时候使用ajax的回包会还没有返回
+                    alert('用户点击分享到朋友圈');
+                },
+                success: function (res) {
+                    alert('已分享');
+                },
+                cancel: function (res) {
+                    alert('已取消');
+                },
+                fail: function (res) {
+                    alert(JSON.stringify(res));
+                }
+            });
+        });
 
     //微信支付
     btnWxPay.addEventListener('tap',function(event){
